<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Color Quiz</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="hint_name">Your name</string>
    <string name="btn_quiz">Quiz</string>
    <string name="checkbox_ready">Check when you are ready</string>
    <string name="msg_checkbox_start">Please check the checkbox first.</string>
    <string name="msg_enter_name">Please enter your name first.</string>
    <string name="player">Player</string>
    <string name="btn_start">Start the quiz</string>
    <string name="quiz_num">Quiz <xliff:g id="currentQuiz" example="1">%d</xliff:g>/<xliff:g id="totalQuizNum" example="17">%d</xliff:g></string>
    <string name="quiz_question">What is the following color?</string>
    <string name="quiz_submit_answer">Choose an answer...</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_next">Next</string>
    <string name="color">Color</string>
    <string name="answer_item">Answer</string>
    <string name="msg_error_quiz_colors_list">Unable to Start the Quiz... Sorry!!</string>
    <string name="msg_choose_answer">Please choose an answer first...</string>
    <string name="msg_system_error">Sorry... Could not initialize the game correctly.</string>
    <string name="msg_correct_answer">Correct!!</string>
    <string name="msg_wrong_answer">Wrong... It is <xliff:g id="correctAnswer" example="Yellow">%s</xliff:g>!!</string>
    <string name="msg_end_title">End of Quiz</string>
    <string name="msg_well_done">Well done <xliff:g id="name" example="Effie">%s</xliff:g>!! Your score is <xliff:g id="score" example="10">%d</xliff:g>!!</string>
    <string name="msg_not_so_good">Not so good <xliff:g id="name" example="Effie">%s</xliff:g>... Your score is <xliff:g id="score" example="10">%d</xliff:g>...</string>
</resources>