<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_view_welcome"
        style="@style/HeaderTextView"
        android:lineSpacingExtra="@dimen/level1"
        android:text="@string/welcome"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_huge"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_main_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_name"
                android:textSize="@dimen/text_size_h2"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/level2"
                android:hint="@string/hint_name"
                android:textSize="@dimen/text_size_h2" />

        </LinearLayout>

    </ScrollView>

    <Button
        style="@style/QuizButtonStyle"
        android:onClick="onClickQuiz"
        android:text="@string/btn_quiz" />

</LinearLayout>