<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".QuizActivity">

    <TextView
        android:layout_gravity="center"
        android:id="@+id/text_view_quiz_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/level2"
        android:text="@string/quiz_num"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_h1"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_gravity="left"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/level1"
            android:layout_height="wrap_content"
            android:text="@string/quiz_question"
            android:textSize="@dimen/text_size_h2"
            android:textStyle="italic"/>

        <View
            android:id="@+id/view_color"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/level3"
            android:background="@color/colorTextPrimary"
            android:layout_height="@dimen/level7" />

        <RadioGroup
            android:layout_width="match_parent"
            android:padding="@dimen/level1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_1"
                android:text="@string/answer_item"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_2"
                android:text="@string/answer_item"/>

            <RadioButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/radio_button_3"
                android:text="@string/answer_item"/>

        </RadioGroup>

    </LinearLayout>

    <Button
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/level3"
        android:layout_marginTop="@dimen/level1"
        android:paddingBottom="@dimen/level3"
        android:paddingTop="@dimen/level3"
        android:text="@string/btn_submit"
        android:textSize="@dimen/text_size_h3"
        android:textStyle="bold" />

</LinearLayout>